--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <nav class="fixed w-full z-50 glass-nav border-b border-gray-800 transition-all duration-300">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-3 group">
-                <img src="assets/logo.png" alt="Jopeh Logo" class="w-10 h-10 rounded-full border-2 border-brand shadow-neon transition-transform group-hover:rotate-12">
+                <img src="assets/logo.png" alt="Jopeh Logo" class="w-10 h-10 rounded-full shadow-neon transition-transform group-hover:rotate-12">
                 <span class="font-heading font-bold text-xl tracking-wide text-white group-hover:text-brand transition-colors">ImJopeh</span>
             </a>
 
@@ -97,7 +97,7 @@
             <div class="w-full md:w-1/2 flex justify-center md:justify-start order-1 md:order-1 relative">
                 <div class="absolute inset-0 bg-brand blur-[100px] opacity-20 rounded-full"></div>
                 <img src="assets/logo.png" alt="imjopeh Profile" 
-                     class="relative z-10 w-64 h-64 md:w-96 md:h-96 object-cover rounded-full border-4 border-brand shadow-neon animate-pulse">
+                     class="relative z-10 w-64 h-64 md:w-96 md:h-96 object-cover rounded-full animate-pulse">
             </div>
 
             <div class="w-full md:w-1/2 text-center md:text-right order-2 md:order-2">
