--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <nav class="fixed w-full z-50 glass-nav border-b border-gray-800 transition-all duration-300">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-3 group">
-                <img src="assets/logo.png" alt="Jopeh Logo" class="w-10 h-10 rounded-full shadow-neon transition-transform group-hover:rotate-12">
+                <img src="assets/logo.png" alt="Jopeh Logo" class="w-10 h-10 rounded-full transition-transform group-hover:rotate-12">
                 <span class="font-heading font-bold text-xl tracking-wide text-white group-hover:text-brand transition-colors">ImJopeh</span>
             </a>
 
