--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="w-full md:w-1/2 text-center md:text-right order-2 md:order-2">
                 <p class="text-brand font-bold text-lg mb-2 tracking-wider uppercase">Welcome to my world</p>
                 <h1 class="font-heading text-4xl md:text-6xl font-extrabold text-white mb-4 leading-tight">
-                    Hi, I'm <span class="text-brand drop-shadow-[0_0_10px_rgba(220,38,38,0.8)]">ImJopeh</span>
+                    Hi, I'm<span class="text-brand drop-shadow-[0_0_10px_rgba(220,38,38,0.8)]">Jopeh</span>
                 </h1>
                 <p class="text-gray-400 text-lg mb-8 max-w-lg ml-auto">
                     Front-end Developer specializing in creating immersive web experiences, Discord Bots, and Minecraft Server infrastructures.
